# attendance-manager

./: .gitignore  Cargo.toml  syllabus.txt
.github/workflows/: ci.yaml  shuttle-deploy.yaml
src/: get_class_name.rs  infra.rs  linebot.rs  main.rs
src/linebot/: create_text.rs  get_class_id_to_class_name.rs  get_events.rs  request_handler.rs
src/linebot/request_handler/: event_handler.rs
